--- a/editor/src/App.css
+++ b/editor/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -11,6 +7,7 @@
   background-color: #222;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .App-title {
@@ -29,11 +26,25 @@
 
 .retail-menu {
 
-  width: 60vw;
+  width: 40vw;
   margin: 25px auto;
   border: 1px solid #222;
-  border-radius: 2px;
+  border-radius: 3px;
 }
+
+.retail-menu__description {
+
+  font-style: italic;
+  padding: 0;
+  margin: 5px 0 0 0;
+}
+
+  .retail-menu__description--category {
+
+    padding: 10px;
+    margin: 0;
+    background-color: #ccc;
+  }
 
 .retail-menu__category {
   
@@ -63,15 +74,17 @@
     border-bottom-width: 0;
   }
 
-  .retail-menu__item .retail-menu__item {
+  .retail-menu__item .retail-menu__items {
 
-    padding-right: 0;
+    margin-top: 5px;
+    border-left: 10px solid #ccc;
   }
 
 .retail-menu__title {
 
   flex: 1 1 60%;
   text-align: left;
+  font-weight: 800;
 }
 
 .retail-menu__price {
@@ -82,10 +95,18 @@
 
 .retail-menu__tag {
 
+  display: inline-block;
   font-size: 12px;
-  padding: 3px;
+  padding: 5px 7px;
+  margin-top: 5px;
   border: 1px solid #222;
   background-color: #222;
   color: #fff;
   border-radius: 3px;
+}
+
+.retail-menu__message:target {
+
+  background-color: yellowgreen;
+  border: 1px solid #222;
 }
