--- a/editor/src/App.css
+++ b/editor/src/App.css
@@ -1,31 +1,39 @@
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.retail-menu {
+
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-  margin-bottom: 20px;
-  text-align: center;
+.retail-menu__item {
+
+  border: 1px solid black;
+  padding: 15px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.retail-menu__title {
+
+  margin: 0;
+  padding: 0;
 }
 
-.App-intro {
-  font-size: large;
+.retail-menu__products {
+
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.retail-product {
+
+  border: 1px solid #999;
+  padding: 10px;
+  margin: 10px 0;
+  display: flex;
 }
 
-.menu-item-input--hidden {
-  display: none;
+.retail-product__input {
+
+  flex: 1 1 auto;
 }
