Products now update Menu state and debug section added with JSON preview

--- a/editor/src/App.css
+++ b/editor/src/App.css
@@ -6,6 +6,13 @@
   padding: 0;
 }
 
+.retail-menu__debug {
+
+  display: block;
+  width: 100%;
+  min-height: 200px;
+}
+
 .retail-menu__item {
 
   border: 1px solid black;
