--- a/editor/src/App.css
+++ b/editor/src/App.css
@@ -1,8 +1,15 @@
+body {
+
+  background-color: #eeeeee;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
 .retail-menu {
 
   list-style-type: none;
-  margin: 10px;
+  margin: 0;
   padding: 0;
 }
 
@@ -15,16 +22,40 @@
 
 .retail-menu__item {
 
-  border: 1px solid #999;
-  border-left: 10px solid dodgerblue;
-  padding: 15px;
+  padding: 0;
   margin-bottom: 10px;
+}
+
+.retail-menu__header {
+
+  display: flex;
+  margin: 0;
+  background-color: #d93a2f;
+  color: #ffffff;
 }
 
 .retail-menu__title {
 
-  margin: 0;
-  padding: 0;
+  flex: 1 1 auto;
+  padding: 0 15px;
+}
+
+.retail-menu__controls {
+
+  flex: 0 0 auto;
+  padding: 15px;
+  display: flex;
+}
+
+  .retail-menu__controls * {
+
+    flex: 0 0 auto;
+    margin: 0 0 0 15px;
+  }
+
+.retail-menu__contents {
+
+  padding: 15px;
 }
 
 .retail-menu__contents--closed {
@@ -43,21 +74,28 @@
 
 .retail-product {
 
-  flex: 0 0 auto;
-  border: 1px solid #999;
-  border-top: 5px solid dodgerblue;
+  flex: 1 1 auto;
   padding: 10px;
-  margin: 10px 10px 10px 0;
+  margin: 10px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-.retail-product:last-child {
+.retail-product__button {
 
-  margin-right: 0;
+  flex: 0 0 auto;
 }
 
 .retail-product__input {
 
   display: flex;
+  width: 100%;
 }
 
 .retail-input {
@@ -65,12 +103,15 @@
   flex: 1 1 auto;
   display: block;
   margin-bottom: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .retail-input--title {
 
   padding: 7px;
   font-size: 16px;
+  border-width: 0;
+  border-bottom: 1px solid #ccc;
 }
 
 .retail-input--description {
@@ -86,3 +127,38 @@
 
   text-align: right;
 }
+
+.retail-menu__button {
+
+  font-size: 0.875rem;
+  background-color: transparent;
+  border: 1px solid #999;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+  .retail-menu__button--primary {
+
+    border-color: #ffffff;
+    color: #ffffff;
+  }
+
+  .retail-menu__button--primary:hover, .retail-menu__button--primary:active {
+
+    background-color: #ffffff;
+    color: #d93a2f;
+  }
+
+  .retail-menu__button--secondary {
+
+    border-color: #a77749;
+    color: #a77749;
+  }
+
+  .retail-menu__button--secondary:hover, .retail-menu__button--secondary:active {
+
+    background-color: #a77749;
+    color: #ffffff;
+  }
